<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
                name="model"
                type="com.example.weatherapp.viewmodel.WeatherViewModel"/>

        <variable
                name="handler"
                type="com.example.weatherapp.handlers.Handler"/>
        <import type="android.view.View" />
    </data>

<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/latitude"
            android:text="@={model.latitude}"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="Enter Latitude"
    />
    <EditText
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/longitude"
            android:text="@={model.longitude}"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/latitude"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="Enter Longitude"
    />

    <Button
            android:text="Get Weather by location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:onClick="@{(v)->handler.getWeatherLocation()}"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/longitude"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="@{latitude.text.length() > 2 &amp;&amp; longitude.text.length() > 2}"
            android:id="@+id/submitByLocation"/>

    <EditText
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:text="@={model.city}"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/submitByLocation"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="Enter City Name"
    />

    <Button
            android:text="Get Weather by City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:onClick="@{(v)->handler.getWeatherCity()}"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/city"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="@{ city.text.length() > 2}"
            android:id="@+id/submitByCity"/>
</android.support.constraint.ConstraintLayout>
</layout>